fix: Horizontal scrollbar obscures content #1249

--- a/editor/css/editor-libs/codemirror-override.css
+++ b/editor/css/editor-libs/codemirror-override.css
@@ -19,6 +19,7 @@
 
 .cm-editor .cm-scroller {
   line-height: inherit;
+  padding-block: 1em;
 }
 
 .cm-editor .cm-cursor {
